syntax = "proto3";

package compilers;

// A message type which can be used if no parameters are needed
message VoidParams {
}

// A code snippet example for a particular language
message Example {
  string data = 1;
}

// The input source that needs to be compiled
message Input {
  string code = 1;
}

// The response returned when compiling source to wasm
message CompileResponse {
  // The compiled wasm output
  bytes data = 1;
}

// The farem related services
service CompilerService {
  // Get an example code snippet
  rpc ExampleCode(VoidParams) returns (Example);
  // Compile a given source code to wasm
  rpc CompileCode(Input) returns (CompileResponse);
}
